--- a/Sinca.VfpProviderCore/Sinca.VfpProviderCore.csproj
+++ b/Sinca.VfpProviderCore/Sinca.VfpProviderCore.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -18,6 +18,10 @@
     <PackageReference Include="VfpClient" Version="1.0.1-beta" />
     <PackageReference Include="VfpEntityFrameworkProvider2" Version="3.0.2-beta" />
     <PackageReference Include="xunit" Version="2.4.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Migrations\" />
   </ItemGroup>
 
 </Project>
