--- a/src/Sinca.Web/Sinca.Web.csproj
+++ b/src/Sinca.Web/Sinca.Web.csproj
@@ -35,23 +35,26 @@
     <PackageReference Include="Serilog.AspNetCore" Version="3.2.0" />
     <PackageReference Include="Serilog.Sinks.File" Version="4.1.0" />
     <PackageReference Include="Serilog.Sinks.Async" Version="1.4.0" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.0.0-rc4" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.1.0" />
     <PackageReference Include="IdentityServer4.AccessTokenValidation" Version="3.0.1" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.2">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Sinca.Application\Sinca.Application.csproj" />
     <ProjectReference Include="..\Sinca.HttpApi\Sinca.HttpApi.csproj" />
     <ProjectReference Include="..\Sinca.EntityFrameworkCore.DbMigrations\Sinca.EntityFrameworkCore.DbMigrations.csproj" />
-    <PackageReference Include="Volo.Abp.AspNetCore.Mvc.UI.Theme.Basic" Version="2.0.1" />
-    <PackageReference Include="Volo.Abp.Autofac" Version="2.0.1" />
-    <PackageReference Include="Volo.Abp.AspNetCore.Authentication.JwtBearer" Version="2.0.1" />
-    <PackageReference Include="Volo.Abp.AspNetCore.Serilog" Version="2.0.1" />
-    <PackageReference Include="Volo.Abp.Identity.Web" Version="2.0.1" />
-    <PackageReference Include="Volo.Abp.Account.Web.IdentityServer" Version="2.0.1" />
-    <PackageReference Include="Volo.Abp.TenantManagement.Web" Version="2.0.1" />
-    <PackageReference Include="Volo.Abp.FeatureManagement.Web" Version="2.0.1" />
+    <PackageReference Include="Volo.Abp.AspNetCore.Mvc.UI.Theme.Basic" Version="2.3.0" />
+    <PackageReference Include="Volo.Abp.Autofac" Version="2.3.0" />
+    <PackageReference Include="Volo.Abp.AspNetCore.Authentication.JwtBearer" Version="2.3.0" />
+    <PackageReference Include="Volo.Abp.AspNetCore.Serilog" Version="2.3.0" />
+    <PackageReference Include="Volo.Abp.Identity.Web" Version="2.3.0" />
+    <PackageReference Include="Volo.Abp.Account.Web.IdentityServer" Version="2.3.0" />
+    <PackageReference Include="Volo.Abp.TenantManagement.Web" Version="2.3.0" />
+    <PackageReference Include="Volo.Abp.FeatureManagement.Web" Version="2.3.0" />
   </ItemGroup>
 
 </Project>
