--- a/src/Volo.Abp.VFP/Volo.Abp.VFP.csproj
+++ b/src/Volo.Abp.VFP/Volo.Abp.VFP.csproj
@@ -5,7 +5,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
-    <AssemblyName>Volo.Abp.MemoryDb</AssemblyName>
+    <AssemblyName>Volo.Abp.Vfp</AssemblyName>
     <PackageId>Volo.Abp.MemoryDb</PackageId>
     <AssetTargetFallback>$(AssetTargetFallback);portable-net45+win8+wp8+wpa81;</AssetTargetFallback>
     <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
@@ -17,6 +17,11 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="VfpClient" Version="1.0.1-beta" />
+    <PackageReference Include="VfpEntityFrameworkProvider2" Version="3.0.2-beta" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Volo.Abp.Ddd.Domain\Volo.Abp.Ddd.Domain.csproj" />
