--- a/src/Volo.Abp.Vfp2/Volo.Abp.Vfp2.csproj
+++ b/src/Volo.Abp.Vfp2/Volo.Abp.Vfp2.csproj
@@ -14,6 +14,10 @@
     <RootNamespace />
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <PlatformTarget>x86</PlatformTarget>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="MongoDB.Driver" Version="2.10.0" />
     <PackageReference Include="VfpClient" Version="1.0.1-beta" />
