--- a/test/Volo.Abp.Vfp2.Tests/Volo.Abp.Vfp2.Tests.csproj
+++ b/test/Volo.Abp.Vfp2.Tests/Volo.Abp.Vfp2.Tests.csproj
@@ -15,7 +15,7 @@
     <ProjectReference Include="..\..\src\Volo.Abp.Autofac\Volo.Abp.Autofac.csproj" />
     <ProjectReference Include="..\..\src\Volo.Abp.Vfp2\Volo.Abp.Vfp2.csproj" />
     <ProjectReference Include="..\AbpTestBase\AbpTestBase.csproj" />
-    <ProjectReference Include="..\Volo.Abp.TestApp\Volo.Abp.TestApp.csproj" />
+    <ProjectReference Include="..\Volo.Abp.TestApp2\Volo.Abp.TestApp2.csproj" />
   </ItemGroup>
 
   <ItemGroup>
